2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSink.java: (AudioSink),
	(AudioSink.AudioClock.getInternalTime), (AudioSink.RingBuffer.run),
	(AudioSink.RingBuffer.acquire),
	(AudioSink.RingBuffer.samplesPlayed), (AudioSink.doEvent):
	* src/com/fluendo/plugin/AudioSinkJ2.java: (AudioSinkJ2),
	(AudioSinkJ2.open), (AudioSinkJ2.close):
	* src/com/fluendo/plugin/AudioSinkSA.java:
	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.getInputStream):
	* src/com/fluendo/plugin/MultipartDemux.java:
	* src/com/fluendo/plugin/OggDemux.java: (OggDemux.Pad):
	* src/com/fluendo/plugin/Queue.java:
	Code cleanups. Remove unused vars.
	Calculate delay more accurately in javax.sound backend.
	Don't set caps on HTTPSrc when already set.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/examples/Player2.java:
	* src/com/fluendo/examples/Player3.java:
	* src/com/fluendo/player/Cortado.java:
	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.build):
	* src/com/fluendo/player/Status.java:
	Code reformatting and cleanups.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Buffer.java: (Buffer.ensureSize):
	* src/com/fluendo/jst/Pad.java: (Pad):
	* src/com/fluendo/jst/Pipeline.java: (Pipeline):
	Remove unused vars.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/codecs/SmokeCodec.java: (SmokeCodec),
	(SmokeCodec.parseHeader):
	Fix unused vars.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jheora/Colorspace.java:
	* src/com/fluendo/jheora/DCTDecode.java:
	(DCTDecode.....ReconRefFrames):
	* src/com/fluendo/jheora/Decode.java:
	* src/com/fluendo/jheora/Filter.java: (Filter..LoopFilter):
	* src/com/fluendo/jheora/JTheoraException.java:
	* src/com/fluendo/jheora/Playback.java:
	* src/com/fluendo/jheora/Quant.java:
	Remove lots of unused vars

2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  compile is now a virtual target
